--- a/portfolio/src/components/footer/footer.css
+++ b/portfolio/src/components/footer/footer.css
@@ -2,6 +2,6 @@ footer{
     background-color: black;
     color: white;
     height: 50px;
-    width: 100%;
+    /* width: 100%; */
     font-family: 'Ubuntu', sans-serif;
 }
