made cards black, imported icons from font awesome and devicon.

--- a/portfolio/src/components/header/header.css
+++ b/portfolio/src/components/header/header.css
@@ -2,7 +2,7 @@
     color: white;
 }
 .linkText:hover{
-    color: lightblue;
+    color: lightskyblue;
 }
 .navColor{
     background-color: black;
