--- a/portfolio/src/pages/portfolioANDabout.css
+++ b/portfolio/src/pages/portfolioANDabout.css
@@ -1,8 +1,5 @@
-.projectview,.contactandresourcesview,.aboutmelanguageview{
-    background-color: white;
-    border-style: solid; 
-    border-color: black; 
-    border-width: 3px;
+.aboutmeview,.contactresourceslanguageview,.projectview{
+    color: white;
 }
 
 .profpic{
@@ -10,6 +7,7 @@
     border-style: solid;
     border-color: black;
     border-width: 3px;
+    box-shadow: 3px 3px 15px black;
 }
 
 #languagepic{
@@ -19,5 +17,24 @@
 
 .resourcepic:hover{
     transform: scale(1.1);
-    transition: all .25s ease;
 }
+.resourcepic{
+    color: skyblue;
+    font-size: 50px;
+    transition: .25s;
+}
+
+#languagepicwhite{
+    color: white;
+    font-size: 60px;
+}
+#languagepic{
+    /* color: white; */
+    font-size: 60px;
+}
+
+/* 
+.resourcepic:hover:after{
+    transform: scale(1.1);
+    transition: all .25s;
+} */
