moved email to nav

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,3 +7,12 @@
 .navColor{
     background-color: black;
 }
+
+.email:hover{
+    transform: scale(1.1);
+}
+.email{
+    color: skyblue;
+    font-size: 45px;
+    transition: .25s;
+}
